# header-emulator

./: .gitignore  README.md  pyproject.toml
docs/: usage.md
src/header_emulator/: __init__.py  builder.py  config.py  constants.py  emulator.py  external_sources.py  middleware.py  profile_loader.py  proxy_manager.py  proxy_tools.py  requests_support.py  rotator.py  session.py  telemetry.py  throttle.py  types.py  utils.py
src/header_emulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/header_emulator/persistence/: __init__.py  base.py  memory.py  redis.py  sqlite.py
src/header_emulator/providers/: __init__.py  locales.py  proxies.py  user_agents.py
tests/: test_async_session.py  test_builder.py  test_emulator.py  test_external_sources.py  test_integration.py  test_persistence.py  test_persistence_redis.py  test_profile_loader.py  test_providers.py  test_proxy_manager.py  test_proxy_tools.py  test_requests_support.py  test_rotator.py  test_rotator_persistence.py  test_session.py  test_telemetry.py  test_throttle.py
