[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "header-emulator"
version = "0.1.0"
description = "Header rotation and session emulator for resilient web scraping."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["web-scraping", "headers", "rotation", "proxies"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "anyio>=3.7.1",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yourname/header-emulator"
Documentation = "https://github.com/yourname/header-emulator"
"Bug Tracker" = "https://github.com/yourname/header-emulator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["header_emulator*"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E203"]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["header_emulator"]
